web/styles/modal.css
/* ... */
.micromodal[aria-hidden="false"] .modal__overlay {
    animation: mmfadeIn 120ms cubic-bezier(0, 0, 0.2, 1);
}

.micromodal[aria-hidden="true"] .modal__container {
    animation: mmfadeOut 75ms cubic-bezier(0, 0, 0.2, 1);
}

.micromodal[aria-hidden="false"] .modal__container {
    animation: mmfadeIn 120ms cubic-bezier(0, 0, 0.2, 1);
}

.micromodal .modal__container,
.micromodal .modal__overlay {
    will-change: transform;
}

.modal__spinner .loading_indicator_spinner {
    height: 16px;

    & path {
        fill: hsl(0deg 0% 100%);
    }
}

.modal__spinner {
    display: flex;
    align-items: center;
    justify-content: center;
}

.time-input-formatted-description {
    font-style: italic;
    opacity: 0.7;
}

#sender_channel_email_address_widget {
    width: 12.875em; /* 206px at 16px/em */
}

#copy_email_address_modal {
    width: 800px;

    .inline {
        display: inline;
    }

    .question-which-parts {
        padding-bottom: 10px;
    }

    .stream-email-header {
        font-size: 1.125em; /* 18px at 16px/em */
    }
}

.modal_select {
    width: var(--modal-input-width);
    padding: 4px 25px 4px 6px;
    color: hsl(0deg 0% 33%);
    border-radius: 4px;
    border: 1px solid hsl(0deg 0% 80%);
    cursor: pointer;
    background-color: hsl(0deg 0% 100%);

    &:disabled {
        cursor: not-allowed;

        /* The background-color of select elements inside modal is different than the others in
        settings pages, because the background of the modal is brighter than the setting page. */
        background-color: hsl(0deg 0% 90%);

        /* This is reset for other browsers to use Chrome's opacity. */
        opacity: 0.7;
    }
}

.modal-field-label {
    margin-bottom: var(--margin-bottom-field-description);
    /* Avoid having the clickable area extend to the full width of the containing element */
    width: fit-content;
}

.modal__body,
.overlay-content {
    .dropdown-widget-button,
    .dropdown_widget_with_label_wrapper {
        width: var(--modal-input-width);
    }
}

.modal_password_input,
.modal_url_input,
.modal_text_input {
    padding: 4px 6px;
    color: hsl(0deg 0% 33%);
    border-radius: 4px;
    border: 1px solid hsl(0deg 0% 80%);
    box-shadow: inset 0 1px 1px hsl(0deg 0% 0% / 7.5%);
    transition:
        border-color linear 0.2s,
        box-shadow linear 0.2s;
    margin-bottom: 10px;
    /* subtract padding (6px each side) and border (1px each side) */
    width: calc(var(--modal-input-width) - 14px);

    &:focus {
        border-color: hsl(206deg 80% 62% / 80%);
        outline: 0;
        box-shadow:
            inset 0 1px 1px hsl(0deg 0% 0% / 7.5%),
            0 0 8px hsl(206deg 80% 62% / 60%);
    }
}

#add-realm-domain-widget {
    .modal_text_input {
        width: 14.7143em; /* 206px at 14px em */
    }
}

#create_bot_short_name {
    /* A shorter dropdown width (~200px at 14px em)
       to ensure the email all fits on one line. */
    width: 14em;
}

#add-poll-modal,
#add-todo-modal {
    /* this height allows 3-4 option rows
    to fit in without need for scrolling */
    height: 32.1428em; /* 450px / 14px em */
    overflow: hidden;

    .modal__content {
        flex-grow: 1;

        .simplebar-content {
            box-sizing: border-box;
            height: 100%;
        }
    }

    #add-poll-form,
    #add-todo-form {
        display: flex;
        flex-direction: column;
        overflow: hidden;
        height: 100%;

        .poll-label,
        .todo-label {
            font-weight: bold;
            margin: 5px 0;
        }

        .poll-question-input-container,
        .todo-title-input-container {
            display: flex;
            margin-bottom: 10px;

            #poll-question-input,
            #todo-title-input {
                flex-grow: 1;
            }
        }

        .poll-options-list,
        .todo-options-list {
            margin: 0;
            height: 0;
            overflow: auto;
            flex-grow: 1;
            padding-right: 16px;

            .option-row {
                list-style-type: none;
                cursor: move;
                margin-top: 10px;
                padding: 0;
                display: flex;
                align-items: center;
                gap: 10px;

                .drag-icon {
                    color: hsl(0deg 0% 75%);
                }

                .poll-option-input {
                    /* Overwrite .modal_text_input margin to keep vertical centering. */
                    margin-bottom: 0;
                    flex-grow: 1;
                }

                .todo-input {
                    flex: 1 1 auto;
                    margin-bottom: 0;
                    max-width: 30%;
                }

                .todo-description-container {
                    flex: 1 1 auto;
                    display: flex;
                    min-width: 0;

                    .todo-description-input {
                        flex-grow: 1;
                        margin-bottom: 0;
                    }
                }
            }

            .option-row:first-child {
                margin-top: 0;
            }

            .option-row:last-child {
                cursor: default;

                .delete-option {
                    visibility: hidden;
                }

                .drag-icon {
                    visibility: hidden;
                }
            }
        }

        @media (max-width: $sm_min) {
            .option-row {
                .todo-input {
                    width: 100%;
                    min-width: 90px;
                }

                .todo-description-container {
                    .todo-description-input {
                        width: 100%;
                        min-width: 90px;
                    }
                }
            }
        }
    }
}
/* ... */

